--- a/src/app/features/underwriting/underwriting.component.html
+++ b/src/app/features/underwriting/underwriting.component.html
@@ -9,6 +9,7 @@
       <input
         [type]="field.type"
         [value]="property.underwritingInputs[field.key]"
+        [class.invalid-field]="!!getUnderwritingFieldError(field.key)"
         [disabled]="property.isHistorical"
         (input)="onUnderwritingFieldChange(field.key, $event)"
       />
@@ -50,6 +51,7 @@
               <input
                 [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted"
                 [value]="tenant.tenantName"
+                [class.invalid-field]="!!getTenantFieldError(tenantIndex, 'tenantName')"
                 (input)="onTenantFieldChange(tenant, tenantIndex, 'tenantName', $event)"
               />
               <div class="field-error" *ngIf="getTenantFieldError(tenantIndex, 'tenantName')">{{ getTenantFieldError(tenantIndex, 'tenantName') }}</div>
@@ -58,6 +60,7 @@
               <select
                 [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted"
                 [value]="tenant.creditType"
+                [class.invalid-field]="!!getTenantFieldError(tenantIndex, 'creditType')"
                 (change)="onTenantFieldChange(tenant, tenantIndex, 'creditType', $event)"
               >
                 <option>National</option>
@@ -68,29 +71,30 @@
               <div class="field-error" *ngIf="getTenantFieldError(tenantIndex, 'creditType')">{{ getTenantFieldError(tenantIndex, 'creditType') }}</div>
             </td>
             <td>
-              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.squareFeet" (input)="onTenantFieldChange(tenant, tenantIndex, 'squareFeet', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" [class.invalid-field]="!!getTenantFieldError(tenantIndex, 'squareFeet')" type="number" [value]="tenant.squareFeet" (input)="onTenantFieldChange(tenant, tenantIndex, 'squareFeet', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError(tenantIndex, 'squareFeet')">{{ getTenantFieldError(tenantIndex, 'squareFeet') }}</div>
             </td>
             <td>
-              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.rentPsf" (input)="onTenantFieldChange(tenant, tenantIndex, 'rentPsf', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" [class.invalid-field]="!!getTenantFieldError(tenantIndex, 'rentPsf')" type="number" [value]="tenant.rentPsf" (input)="onTenantFieldChange(tenant, tenantIndex, 'rentPsf', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError(tenantIndex, 'rentPsf')">{{ getTenantFieldError(tenantIndex, 'rentPsf') }}</div>
             </td>
             <td>
-              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.annualEscalations" (input)="onTenantFieldChange(tenant, tenantIndex, 'annualEscalations', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" [class.invalid-field]="!!getTenantFieldError(tenantIndex, 'annualEscalations')" type="number" [value]="tenant.annualEscalations" (input)="onTenantFieldChange(tenant, tenantIndex, 'annualEscalations', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError(tenantIndex, 'annualEscalations')">{{ getTenantFieldError(tenantIndex, 'annualEscalations') }}</div>
             </td>
             <td>
-              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="date" [value]="tenant.leaseStart | date : 'yyyy-MM-dd'" (input)="onTenantFieldChange(tenant, tenantIndex, 'leaseStart', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" [class.invalid-field]="!!getTenantFieldError(tenantIndex, 'leaseStart')" type="date" [value]="tenant.leaseStart | date : 'yyyy-MM-dd'" (input)="onTenantFieldChange(tenant, tenantIndex, 'leaseStart', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError(tenantIndex, 'leaseStart')">{{ getTenantFieldError(tenantIndex, 'leaseStart') }}</div>
             </td>
             <td>
-              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="date" [value]="tenant.leaseEnd | date : 'yyyy-MM-dd'" (input)="onTenantFieldChange(tenant, tenantIndex, 'leaseEnd', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" [class.invalid-field]="!!getTenantFieldError(tenantIndex, 'leaseEnd')" type="date" [value]="tenant.leaseEnd | date : 'yyyy-MM-dd'" (input)="onTenantFieldChange(tenant, tenantIndex, 'leaseEnd', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError(tenantIndex, 'leaseEnd')">{{ getTenantFieldError(tenantIndex, 'leaseEnd') }}</div>
             </td>
             <td>
               <select
                 [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted"
                 [value]="tenant.leaseType"
+                [class.invalid-field]="!!getTenantFieldError(tenantIndex, 'leaseType')"
                 (change)="onTenantFieldChange(tenant, tenantIndex, 'leaseType', $event)"
               >
                 <option>NNN</option>
@@ -104,6 +108,7 @@
               <select
                 [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted"
                 [value]="tenant.renew"
+                [class.invalid-field]="!!getTenantFieldError(tenantIndex, 'renew')"
                 (change)="onTenantFieldChange(tenant, tenantIndex, 'renew', $event)"
               >
                 <option>Yes</option>
@@ -114,15 +119,15 @@
               <div class="field-error" *ngIf="getTenantFieldError(tenantIndex, 'renew')">{{ getTenantFieldError(tenantIndex, 'renew') }}</div>
             </td>
             <td>
-              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.downtimeMonths" (input)="onTenantFieldChange(tenant, tenantIndex, 'downtimeMonths', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" [class.invalid-field]="!!getTenantFieldError(tenantIndex, 'downtimeMonths')" type="number" [value]="tenant.downtimeMonths" (input)="onTenantFieldChange(tenant, tenantIndex, 'downtimeMonths', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError(tenantIndex, 'downtimeMonths')">{{ getTenantFieldError(tenantIndex, 'downtimeMonths') }}</div>
             </td>
             <td>
-              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.tiPsf" (input)="onTenantFieldChange(tenant, tenantIndex, 'tiPsf', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" [class.invalid-field]="!!getTenantFieldError(tenantIndex, 'tiPsf')" type="number" [value]="tenant.tiPsf" (input)="onTenantFieldChange(tenant, tenantIndex, 'tiPsf', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError(tenantIndex, 'tiPsf')">{{ getTenantFieldError(tenantIndex, 'tiPsf') }}</div>
             </td>
             <td>
-              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" type="number" [value]="tenant.lcPsf" (input)="onTenantFieldChange(tenant, tenantIndex, 'lcPsf', $event)" />
+              <input [disabled]="property.isHistorical || tenant.isVacant || tenant.isDeleted" [class.invalid-field]="!!getTenantFieldError(tenantIndex, 'lcPsf')" type="number" [value]="tenant.lcPsf" (input)="onTenantFieldChange(tenant, tenantIndex, 'lcPsf', $event)" />
               <div class="field-error" *ngIf="getTenantFieldError(tenantIndex, 'lcPsf')">{{ getTenantFieldError(tenantIndex, 'lcPsf') }}</div>
             </td>
             <td>
